# deadman-switch

./: .dockerignore  .gitignore  Dockerfile  README_EMAIL_SETUP.md  docker-compose.yml  email_service.py  fix_column_type.py  fix_foreign_key.py  main.py  migrate_add_email_fields.py  migrate_add_password_reset.py  pyproject.toml  readme.md
app/: celery_app.py  database.py  email_service.py  main.py  models.py  tasks.py
static/css/: main.css
templates/: base.html  create_switch.html  dashboard.html  forgot_password.html  login.html  register.html  reset_password.html
